python/testData/highlighting/fStringSingleRightBraces.py
f'<error descr="Single '}' is not allowed inside f-strings">}</error>'
f'{x}{y}<error descr="Single '}' is not allowed inside f-strings">}</error>'
f'{x}}}<error descr="Single '}' is not allowed inside f-strings">}</error>'
f'{x:{y}}<error descr="Single '}' is not allowed inside f-strings">}</error>'
f'{x:{y}}}}'
f'{"}":{"}"}}'